--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-OpenCart_Test_Suite" class="navigator-link">
-              <span class="suite-name border-failed">OpenCart Test Suite</span>
+              <span class="suite-name border-passed">OpenCart Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-OpenCart_Test_Suite" class="navigator-link ">
-                    <span>mastersuite.xml</span>
+                    <span>E:\Workspace\openCartPOM\mastersuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="hide-methods failed suite-OpenCart_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-OpenCart_Test_Suite -->
-                      <a href="#" panel-name="suite-OpenCart_Test_Suite" class="show-methods failed suite-OpenCart_Test_Suite"> (show)</a> <!-- show-methods failed suite-OpenCart_Test_Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-OpenCart_Test_Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.AccountRegistrationTest" class="method navigator-link" hash-for-method="Verify_Registration_Test">Verify_Registration_Test</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-OpenCart_Test_Suite -->
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,6 +102,11 @@
                       <a href="#" panel-name="suite-OpenCart_Test_Suite" class="show-methods passed suite-OpenCart_Test_Suite"> (show)</a> <!-- show-methods passed suite-OpenCart_Test_Suite -->
                     </span>
                     <div class="method-list-content passed suite-OpenCart_Test_Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.AccountRegistrationTest" class="method navigator-link" hash-for-method="Verify_Registration_Test">Verify_Registration_Test</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-OpenCart_Test_Suite" title="testCases.LoginTest" class="method navigator-link" hash-for-method="login_test">login_test</a> <!-- method navigator-link -->
@@ -133,9 +124,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-OpenCart_Test_Suite" class="panel OpenCart_Test_Suite">
-          <div class="suite-OpenCart_Test_Suite-class-failed">
+          <div class="suite-OpenCart_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">testCases.AccountRegistrationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -144,15 +135,10 @@
                   <a name="Verify_Registration_Test">
                   </a> <!-- Verify_Registration_Test -->
                   <span class="method-name">Verify_Registration_Test</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.AccountRegistrationTest.Verify_Registration_Test(AccountRegistrationTest.java:61)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-OpenCart_Test_Suite-class-failed -->
+          </div> <!-- suite-OpenCart_Test_Suite-class-passed -->
           <div class="suite-OpenCart_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -171,7 +157,7 @@
         </div> <!-- panel OpenCart_Test_Suite -->
         <div panel-name="test-xml-OpenCart_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/adithbala/eclipse-workspace/opencart/mastersuite.xml</span>
+            <span class="header-content">E:\Workspace\openCartPOM\mastersuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -183,11 +169,6 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;3&quot; name=&quot;Opencart Tests&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
-    &lt;groups&gt;
-      &lt;run&gt;
-        &lt;include name=&quot;master&quot;/&gt;
-      &lt;/run&gt;
-    &lt;/groups&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testCases.AccountRegistrationTest&quot;/&gt;
       &lt;class name=&quot;testCases.LoginTest&quot;/&gt;
@@ -262,16 +243,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login_test')
 data.setCell(0, 2, 'testCases.LoginTest')
-data.setCell(0, 3, 6801);
+data.setCell(0, 3, 8125);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Verify_Registration_Test')
 data.setCell(1, 2, 'testCases.AccountRegistrationTest')
-data.setCell(1, 3, 4664);
+data.setCell(1, 3, 5501);
 window.suiteTableData['OpenCart_Test_Suite']= { tableData: data, tableDiv: 'times-div-OpenCart_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-OpenCart_Test_Suite">
               </div> <!-- times-div-OpenCart_Test_Suite -->
             </div> <!-- times-div -->
@@ -303,22 +284,28 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">Verify_Registration_Test</span>
-                <span class="method-start">6078 ms</span>
+                <span class="method-start">3141 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">8650 ms</span>
+              </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp(chrome)</span>
-                <span class="method-start">10768 ms</span>
+                <span class="method-start">9312 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login_test</span>
-                <span class="method-start">13983 ms</span>
+                <span class="method-start">10651 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">18778 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
