--- a/test-output/old/Failed suite [OpenCart Test Suite]/classes.html
+++ b/test-output/old/Failed suite [OpenCart Test Suite]/classes.html
@@ -4,15 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.LoginDataDrivenTest</td>
+<td>testCases.AccountRegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_LoginDDT</td>
-<td>&nbsp;</td></tr>
+<td>Verify_Registration_Test</td>
+<td>regression master </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
