--- a/test-output/old/OpenCart Test Suite/methods-alphabetical.html
+++ b/test-output/old/OpenCart Test Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OpenCart Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c16b87">  <td>22/04/05 11:03:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@59fd97a8]">Verify_Registration_Test</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="95b565">  <td>22/04/05 11:04:05</td>   <td>7905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login_test()[pri:0, instance:testCases.LoginTest@4d9e68d0]">login_test</td> 
-  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="736495">  <td>22/04/05 11:04:01</td>   <td>4690</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@4d9e68d0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
-<tr bgcolor="736495">  <td>22/04/05 11:03:51</td>   <td>-6072</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.AccountRegistrationTest@59fd97a8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@548554586</td>   <td></td> </tr>
+<tr bgcolor="b59da4">  <td>22/04/05 17:12:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountRegistrationTest.Verify_Registration_Test()[pri:0, instance:testCases.AccountRegistrationTest@537f60bf]">Verify_Registration_Test</td> 
+  <td>main@461591680</td>   <td></td> </tr>
+<tr bgcolor="66a7c2">  <td>22/04/05 17:13:03</td>   <td>7510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login_test()[pri:0, instance:testCases.LoginTest@38cee291]">login_test</td> 
+  <td>main@461591680</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>22/04/05 17:13:02</td>   <td>6171</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.LoginTest@38cee291]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461591680</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>22/04/05 17:12:53</td>   <td>-3134</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:testCases.AccountRegistrationTest@537f60bf]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461591680</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>22/04/05 17:13:01</td>   <td>5509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testCases.AccountRegistrationTest@537f60bf]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461591680</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>22/04/05 17:13:12</td>   <td>15637</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testCases.LoginTest@38cee291]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461591680</td>   <td></td> </tr>
 </table>
